<resources>
    <string name="app_name">MiNevera</string>


    # instructions
    <string name="textInstructions">Instrucciones:</string>
    <string name="textInstructions1">- Pulsando el botón con el icono de lista, se puede acceder al buscador de recetas. Introduce el nombre de algún alimento y la aplicación te mostrará varias opciones de recetas.\n\n
    - Pulsando el botón con el icono de más, se pueden añadir alimentos a tu nevera. Si el alimento no tiene código de barras o una fecha de caducidad concreta,  se puede añadir de forma manual introduciendo el nombre del producto y una aproximación de los días que se estima que el producto puede durar en buenas condiciones. Si el alimento tiene código de barras, se puede añadir con la opción de escaneado de código de barras. Se escanea el producto para obtener su nombre y se añade la fecha de caducidad del producto por medio de un calendario interactivo.\n\n
    - Pulsando el botón con el icono del mapa con un marcador, se accede a la funcionalidad de localización de supermercados. La aplicación solicita acceso a la ubicación de tu dispositivo y se proporcionan opciones de supermercados cercanos. \n
</string>


    # about us
    <string name="text_au">About Us</string>
    <string name="text_au1">
        Somos tres alumnas de la asignatura de Aplicaciones Móviles de
        la Universidad Carlos III. Nuestra intención era crear una aplicación que ayude a
        los usuarios a realizar un consumo responsable de alimentos e intentar reducir el
        desperdicio de comida, y creemos que MiNevera es la aplicación perfecta para ello.
    </string>
    <string name="text_au2">
        A continuación, incluimos más información sobre nosotras.\n
        Grupo 6:\n\n
        Paula Capel Silveiro, 100383474\n
        LinkedIn: linkedin.com/in/paula-capel-silveiro \n
        \n
        Delia Sánchez Gómez, 100383339\n
        LinkedIn: linkedin.com/in/deliasgmz \n
        \n
        Paula Madrid Alonso, 100406260 \n
        LinkedIn: linkedin.com/in/paula-madrid-alonso \n
    </string>


    <string name="text_map">MAPA</string>

    <string name="action_settings">Settings</string>

    # main activity
    <string name="b_lista_desc">Añadir a la lista de la compra</string>
    <string name="b_mas_desc">Añadir productos a la nevera</string>
    <string name="b_mapa_desc">Abrir el mapa </string>
    <string name="mensaje_mainact">What\'s in your fridge?</string>
    <string-array name="options">
        <item>Options:</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    # add activity
    <string name="no_content">You haven\'t added anything...</string>
    <string name="menu_insert">Add product</string>
    <string name="menu_delete">Delete product</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="null_name">You need to introduce the name of the product</string>
    <string name="null_days">Please, introduce a valid value</string>
    <string name="max_days">The maximum number of days is 25</string>

    #add menu
    <string name="b_bbdd_desc">Add products by hand</string>
    <string name="b_camara_desc">Scan product</string>

    #search ingredient
    <string name="title_dialog">Error</string>
    <string name="message_dialog">Please enter an ingredient</string>
    <string name="button_ok_search">Search</string>
    <string name="toast_name">Ingredient OK</string>
    <string name="message_search">Search a recipe by ingredient</string>
    <string name="edit_message">Enter an ingredient</string>

    #camara menu
    <string name="fecha_cad_desc">Introduce the expiration date</string>
    <string name="fecha_cad">DD-MM-YYYY</string>
    <string name="null_name_camara">Product name is empty</string>
    <string name="button_ok_search_locations">Search supermarkets in map</string>

</resources>